feat/refactor:melhoria na escrita e adição de um TimeOut no gerenciador